# funk

./: debug_tokens.hs  funk.cabal
examples/: main.funk  test.funk
examples/lib/: Prelude.funk
examples/lib/Data/: Bool.funk  IO.funk
src/: Funk.hs
src/Funk/: Fmt.hs  Infer.hs  Lexer.hs  Parser.hs  SExpr.hs  STerm.hs  Solver.hs  Subst.hs  Term.hs  Token.hs
test/: Main.hs
test/Funk/: IntegrationSpec.hs  ParserSpec.hs  SimpleSpec.hs  SolverSpec.hs  TokenSpec.hs
