cabal-version:   3.0
name:            funk
version:         0.1.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Funk
        Funk.Parser
        Funk.SExpr
        Funk.Lexer
        Funk.Solver
        Funk.Term

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        ansi-terminal,
        containers,
        mtl,
        optparse-applicative,
        parsec

executable funk
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        funk

test-suite funk-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        funk
