cabal-version:   3.0
name:            funk
version:         0.1.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Funk
        Funk.Fresh
        Funk.Infer
        Funk.Parser
        Funk.Solver
        Funk.STerm
        Funk.Subst
        Funk.Term
        Funk.Token

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        ansi-terminal,
        containers,
        mtl,
        optparse-applicative,
        parsec,
        pretty

executable funk
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        funk

test-suite funk-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    
        Funk.TokenSpec
        Funk.ParserSpec
        Funk.SimpleSpec
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4,
        funk,
        hspec >=2.7,
        parsec
